--- a/SaiDhamProject/SaiDhamApplication/SaiDhamApplication.csproj
+++ b/SaiDhamProject/SaiDhamApplication/SaiDhamApplication.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+	  <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
-
+  <ItemGroup>
+    <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\html\" />
+    <Folder Include="wwwroot\js\minified\" />
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
 </Project>
