--- a/SaiDhamProject/SaiDhamRepositiory/SaiDhamRepositiory.csproj
+++ b/SaiDhamProject/SaiDhamRepositiory/SaiDhamRepositiory.csproj
@@ -1,7 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+ <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-  </PropertyGroup>
-
+	 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+ </PropertyGroup>
 </Project>
